add multiroles and pointers for null possible fields in dto and domain
