# docs/swagger.yaml
@@ -8,6 +8,31 @@ definitions:
         example: secret
         type: string
     type: object
+  dto.LeadCreateUpdateDTO:
+    properties:
+      converted_to_client_at:
+        type: string
+      created_at:
+        type: string
+      created_by:
+        type: integer
+      id:
+        type: integer
+      name:
+        type: string
+      phone:
+        type: string
+      qualification:
+        type: string
+      school_id:
+        type: string
+      source_id:
+        type: integer
+      status_id:
+        type: integer
+      trial_date:
+        type: string
+    type: object
   dto.LoginDTO:
     properties:
       email:
@@ -65,10 +90,22 @@ definitions:
         type: string
       id:
         type: integer
-      role:
-        type: string
       school_id:
         type: string
+    type: object
+  leadhandlers.GroupedLeadInputDTO:
+    properties:
+      group_id:
+        type: integer
+      school_id:
+        type: string
+    type: object
+  leadhandlers.GroupedLeadOutputDTO:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/dto.LeadCreateUpdateDTO'
+        type: array
     type: object
   user.AuthCheckResponse:
     properties:
@@ -83,6 +120,10 @@ definitions:
       message:
         example: success
         type: string
+      roles:
+        items:
+          type: string
+        type: array
       user:
         $ref: '#/definitions/dto.UserAccountResponseDTO'
     type: object
@@ -110,6 +151,38 @@ paths:
       summary: Проверка авторизации
       tags:
       - Auth
+  /api/leads/groupedleads:
+    post:
+      consumes:
+      - application/json
+      description: Позволяет получить сгруппированных лидов школы
+      parameters:
+      - description: Фильтры group_id и school_id
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/leadhandlers.GroupedLeadInputDTO'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/leadhandlers.GroupedLeadOutputDTO'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: GroupedLeads
+      tags:
+      - Leads
   /api/ownerschool/register:
     post:
       consumes:
