# internal/Infrastructure/adapters/http/gin/handlers/transactions/register.go
@@ -4,7 +4,7 @@ import (
 	"net/http"
 	"time"
 
-	"github.com/1DamnDaniel3/rscrm_go_serv/internal/App/usecase/user"
+	"github.com/1DamnDaniel3/rscrm_go_serv/internal/App/usecase/userUCs"
 	"github.com/1DamnDaniel3/rscrm_go_serv/internal/Core/domain/entities"
 	"github.com/1DamnDaniel3/rscrm_go_serv/internal/Infrastructure/adapters/http/gin/handlers/transactions/dto"
 	"github.com/gin-gonic/gin"
@@ -12,7 +12,7 @@ import (
 )
 
 type RegisterHandler struct {
-	usecase user.IRegisterUseCase
+	usecase userUCs.IRegisterUseCase
 }
 
 // Register godoc
@@ -25,7 +25,7 @@ type RegisterHandler struct {
 // @Success      200    {object}  dto.RegisterOutput
 // @Failure      400    {object}  map[string]string
 // @Router       /api/ownerschool/register [post]
-func NewRegisterHandler(uc user.IRegisterUseCase) *RegisterHandler {
+func NewRegisterHandler(uc userUCs.IRegisterUseCase) *RegisterHandler {
 	return &RegisterHandler{usecase: uc}
 }
 
@@ -41,7 +41,7 @@ func (h *RegisterHandler) Register(c *gin.Context) {
 
 	// 1. Маппим школу
 	school := &entities.School{
-		ID:         uuid.New().String(),
+		Id:         uuid.New().String(),
 		Name:       input.School.Name,
 		City:       input.School.City,
 		Phone:      input.School.Phone,
@@ -52,19 +52,19 @@ func (h *RegisterHandler) Register(c *gin.Context) {
 	user := &entities.UserAccount{
 		Email:      input.Account.Email,
 		Password:   input.Account.Password,
-		Role:       "owner",
 		Created_at: now,
-		School_id:  school.ID,
+		School_id:  school.Id,
 	}
 	// 3. Создаём профиль
 	profile := &entities.UserProfile{
 		Full_name:  input.Profile.FullName,
 		Phone:      input.Profile.Phone,
 		Birthdate:  input.Profile.Birthdate,
-		Account_id: user.ID,
+		Account_id: user.Id,
 	}
+	accountRoles := &entities.AccountRoles{}
 
-	outputEnity, err := h.usecase.Execute(c.Request.Context(), school, user, profile)
+	outputEnity, err := h.usecase.Execute(c.Request.Context(), school, user, profile, accountRoles)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
@@ -73,7 +73,7 @@ func (h *RegisterHandler) Register(c *gin.Context) {
 	// маппим ответ
 
 	output := dto.RegisterOutput{
-		School_id: outputEnity.ID,
+		School_id: outputEnity.Id,
 	}
 
 	c.JSON(http.StatusOK, output)
