# internal/Infrastructure/adapters/http/gin/routes/entity_routes/lead_routes.go
@@ -1,9 +1,11 @@
 package entityroutes
 
 import (
+	"github.com/1DamnDaniel3/rscrm_go_serv/internal/App/usecase/leadUCs"
 	"github.com/1DamnDaniel3/rscrm_go_serv/internal/Core/domain/entities"
 	adapters "github.com/1DamnDaniel3/rscrm_go_serv/internal/Infrastructure/adapters/gorm"
 	"github.com/1DamnDaniel3/rscrm_go_serv/internal/Infrastructure/adapters/http/gin/handlers/generic"
+	leadhandlers "github.com/1DamnDaniel3/rscrm_go_serv/internal/Infrastructure/adapters/http/gin/handlers/leadHandlers"
 	genericrouter "github.com/1DamnDaniel3/rscrm_go_serv/internal/Infrastructure/adapters/http/gin/routes/entity_routes/generic_router"
 	"github.com/1DamnDaniel3/rscrm_go_serv/internal/Infrastructure/dto"
 	"github.com/gin-gonic/gin"
@@ -16,6 +18,10 @@ func LeadRoutes(
 ) {
 	leadRepo := adapters.NewGormLeadsRepo(db)
 
+	// Grouped Leads
+	groupedLeadsUC := leadUCs.NewGroupedLeadsUC(leadRepo)
+	groupedLeadsHandler := leadhandlers.NewGroupedLeadsHandler(groupedLeadsUC)
+
 	genericHandler := generic.NewGenericHandler[
 		entities.Lead,
 		dto.LeadCreateUpdateDTO,
@@ -23,4 +29,6 @@ func LeadRoutes(
 	](leadRepo)
 
 	genericrouter.RegisterCRUDRoutes(r, "leads", genericHandler)
+	r.POST("leads/groupedleads", groupedLeadsHandler.GetGroupedLeads)
+
 }
